--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Danshee / Code
+author: "Daniel Pietsch"
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Yet another code monkey.
